[package]
name = "dustloopbot-twitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggstdl = { git = "https://github.com/sagansfault/ggstdl", branch = "main" }
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = "0.7.4"
tokio-stream = "0.1.11"
tokio-tungstenite = "*"
futures-util = { version = "0.3.25" }
url = "2.3.1"
regex = "1.7.1"
lazy_static = "1.4.0"
